[package]
name = "tguirs"
version = "0.1.1"
edition = "2021"
authors = ["lualvsil"]
description = "Library to interact with the Termux:GUI in rust"
repository = "https://github.com/lualvsil/tguirs"
license = "MIT OR Apache-2.0"

[dependencies]
nix = { version = "0.29.0", features = ["socket", "uio"] }
prost = "0.13.4"
rand = "0.8.5"

[build-dependencies]
prost-build = "0.13.4"
